fix network button alignment

--- a/app/styles/searchResults.less
+++ b/app/styles/searchResults.less
@@ -20,6 +20,7 @@
   color: #337ab7;
   margin-top: 10px;
   width: @tile-width;
+  display: block;
 }
 
 .main {
